force-app/main/default/objects/Repeat_Call__c/Repeat_Call__c.object-meta.xml
<CustomObject>
    <label>Repeat Call</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Repeat Call No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Repeat Call</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>