force-app/main/default/objects/Repeat_Call__c/fields/Check_2__c.field-meta.xml
<CustomField>
    <fullName>Check_2__c</fullName>
    <formula>TEXT(Date_of_Interaction__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check 2</label>
    <type>Text</type>
</CustomField>