force-app/main/default/objects/Repeat_Call__c/fields/Check__c.field-meta.xml
<CustomField>
    <fullName>Check__c</fullName>
    <formula>LEFT(TEXT(Date_of_Interaction__c),LEN(TEXT(Date_of_Interaction__c))-4) == LEFT(TEXT(Case__r.CreatedDate),LEN(TEXT(Case__r.CreatedDate))-4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check</label>
    <type>Checkbox</type>
</CustomField>