force-app/main/default/objects/Repeat_Call__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Repeat Call</relationshipLabel>
    <relationshipName>Repeat_Call</relationshipName>
    <type>Lookup</type>
</CustomField>