force-app/main/default/objects/Repeat_Call__c/fields/Date_of_Interaction__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Interaction__c</fullName>
    <label>Date of Interaction</label>
    <type>DateTime</type>
</CustomField>