force-app/main/default/objects/Repeat_Call__c/fields/Date_time__c.field-meta.xml
<CustomField>
    <fullName>Date_time__c</fullName>
    <label>Date time</label>
    <type>DateTime</type>
</CustomField>