force-app/main/default/objects/Repeat_Call__c/fields/date_time_text__c.field-meta.xml
<CustomField>
    <fullName>date_time_text__c</fullName>
    <description>CreatedDate + ((MyHours__c * 60) + MyMins__c)/1440</description>
    <formula>TEXT((Date_time__c + ((7*60))/1440))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>date time text</label>
    <type>Text</type>
</CustomField>