force-app/main/default/objects/Repeat_Call__c/fields/Interaction__c.field-meta.xml
<CustomField>
    <fullName>Interaction__c</fullName>
    <formula>Case__r.CaseNumber+&apos;-&apos;+ Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interaction</label>
    <type>Text</type>
</CustomField>