force-app/main/default/objects/Repeat_Call__c/fields/Seq__c.field-meta.xml
<CustomField>
    <fullName>Seq__c</fullName>
    <label>Seq</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>