force-app/main/default/objects/Repeat_Call__c/fields/Sub_Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Case_Type__c</fullName>
    <label>Sub Case Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>